changing accounts to users

--- a/bireme/templates/base.html
+++ b/bireme/templates/base.html
@@ -48,7 +48,7 @@
                         {% trans "Centro Latino-Americano e do Caribe de Informação em Ciências da Saúde" %}<br>
                         {% trans "Rua Botucatu, 862 | cep: 04023-901 | São Paulo - SP | Tel: (55 11) 5576-9800 | Fax: (55 11) 5575-8868 " %}<br>
                         <a href="http://new.paho.org/bireme" title="{% trans 'Site Institucional da Bireme' %}">http://new.paho.org/bireme</a><br>
-                        <small>v{% include 'version.txt' %} | <a target="_blank" href="http://github.com/bireme/accounts" title="{% trans "Project source on GitHub" %}">{% trans "code on github" %}</a></small>
+                        <small>v{% include 'version.txt' %} | <a target="_blank" href="http://github.com/bireme/users" title="{% trans "Project source on GitHub" %}">{% trans "code on github" %}</a></small>
                     </p>
             </div>
             {% endblock %}
