--- a/bireme/templates/menu.html
+++ b/bireme/templates/menu.html
@@ -8,18 +8,7 @@
                     <div class="row-fluid top">
                         
                         <ul class="nav pull-left">
-                            <li><a href="{% url 'main.views.dashboard' %}" title="{% trans "Dashboard" %}"><i class="icon-home"></i> {% trans "Dashboard" %}</a></li>
-                            
-                            {% if user.profile.type == "advanced" or user.is_superuser %}
-                                <li><a href="{% url 'main.views.users' %}" title="{% trans "Users" %}"><i class="icon-group"></i> {% trans "Users" %}</a></li>
-                                <li><a href="{% url 'main.views.networks' %}" title=""><i class="icon-sitemap"></i> {% trans "Networks" %}</a></li>
-                            {% endif %}
-
-                            {% if user.is_superuser %}
-                                <li><a href="{% url 'main.views.services' %}" title=""><i class="icon-star"></i> {% trans "Services" %}</a></li>
-                                <li><a href="{% url 'main.views.roles' %}" title=""><i class="icon-lock"></i> {% trans "Roles" %}</a></li>
-                                <li><a href="{% url 'admin:index' %}" title=""><i class="icon-lock"></i> {% trans "Django Admin" %}</a></li>
-                            {% endif %}
+                            <li><a href="#" title="{% trans "Dashboard" %}"><i class="icon-home"></i> {% trans "Dashboard" %}</a></li>
                         </ul>
 
                         <ul class="nav pull-right">
@@ -37,16 +26,7 @@
                                     {% if LANGUAGE_CODE != "es" %}<li><a href="javascript: change_language('es')" title="{% trans 'Spanish' %}">{% trans 'Spanish'|capfirst %}</a></li>{% endif %}                                    
                                 </ul>
                             </li>
-                            <li>
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="menu_profile">
-                                    <i class="icon-user"></i><i class="icon-caret-down"></i>
-                                </a>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="menu_profile">
-                                    <li><a href="{% url 'registration.views.change_profile' %}" title="{% trans "Edit profile" %}">{% trans "Edit profile" %}</a></li>
-                                    <li><a href="{% url 'django.contrib.auth.views.password_change' %}" title="{% trans "Change Password" %}">{% trans "Change password" %}</a></li>
-                                </ul>
-                            </li>
-
+                            
                             <li><a href="{% url 'django.contrib.auth.views.logout' %}" title="Logout"><i class="icon-signout"></i></a></li>
                         </ul>
                     </div>
