--- a/bireme/registration/templates/registration/login.html
+++ b/bireme/registration/templates/registration/login.html
@@ -31,7 +31,7 @@
 
         <form class="form-signin" action="{% url 'django.contrib.auth.views.login' %}" method="post" name="login">
             
-            {% csrf_token %}<input type="hidden" name="next" value="{% url 'main.views.dashboard' %}" />
+            {% csrf_token %}<input type="hidden" name="next" value="/" />
 
             <h2 class="form-signin-heading">{% trans "Login" %}</h2>
 
