--- a/bireme/registration/templates/registration/change-profile.html
+++ b/bireme/registration/templates/registration/change-profile.html
@@ -34,6 +34,7 @@
     <form method="POST">{% csrf_token %}
         <fieldset>                                
             {{ form }}
+            {{ form_user }}
         </fieldset>
 
         <div class="control-panel form-submit">
